Update membuat resposive: mobile phone

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- navbar-start -->
-    <header>
+    <header class="navbar">
       <div class="navbar-title">
         <h1>My <span>Portofolio.</span></h1>
       </div>
@@ -33,9 +33,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
 
-        <!-- <button class="humberger-menu">
-          <i class="fa-light fa-bars" style="color: #fff"></i>
-        </button> -->
+        <i class="fa-solid fa-bars humberger-menu"></i>
       </nav>
     </header>
     <!-- navbar-end -->
