"update responsive mobile phone"

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!-- main-end -->
 
     <!-- footer start -->
-    <footer>
+    <footer class="footer">
       <p>&copy; 2024 Gilang Ramadhan. All rights reserved.</p>
     </footer>
     <!-- footer end -->
